--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,12 @@
   background-color: #3A76D3;
   color: #ffffff; }
 
-.background-secondary-darker {
+.background-secondary-two {
   background-color: #2E64B9;
+  color: #ffffff; }
+
+.background-secondary-three {
+  background-color: #2B4F89;
   color: #ffffff; }
 
 .sidebar-item {
@@ -21,5 +25,35 @@
 
 .logo-blue {
   width: 150px; }
+
+input,
+textarea,
+select {
+  outline: 0; }
+
+input.custom-input, input.custom-input:focus {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  background-color: #7BD4B1;
+  outline: 0 !important;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid #2B4F89; }
+
+.request-demo, .request-demo:hover {
+  background-color: white;
+  color: #203554;
+  border: none;
+  border-radius: 12px;
+  font-weight: bold; }
+
+a.sign-in, a.sign-in:hover {
+  background-color: transparent;
+  border-radius: 12px;
+  color: #203554;
+  border: 1px solid #2B4F89; }
+  a.sign-in.inverted, a.sign-in:hover.inverted {
+    color: #ffffff;
+    border: 1px solid white; }
 
 /*# sourceMappingURL=style.css.map */
